--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="calculatorcss.css">
+<script src="calculatorjs.js"></script>
 <input id="display" type="text" autocomplete="off" disabled="disabled">
 <table width=360>
  <tr width=360 height=540>
