--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="https://t0rnato.github.io/calculator/calculatorcss.css">
+<title>Calculator</title>
 <script src="https://t0rnato.github.io/calculator/calculatorjs.js"></script>
 <input id="display" type="text" autocomplete="off" disabled="disabled">
 <table width=360>
